--- a/.github/workflows/Class3.yml
+++ b/.github/workflows/Class3.yml
@@ -29,7 +29,7 @@ jobs:
         with:
          cmd: install # Yarn command
       - name: Creating Build
-        run: yarn build
+        run: npm build
       - name: installing surge
         run: npm install -g surge
       - name: deploying surge
